Fix: Update app configuration for Vercel deployment

--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,10 @@
             "src": "/(.*)",
             "dest": "app.py"
         }
-    ]
+    ],
+    "env": {
+        "PYTHONPATH": ".",
+        "FLASK_ENV": "production",
+        "FLASK_APP": "app.py"
+    }
 } 
